[project]
name = "training-data-analyst"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "software-is-art", email = "37229146+software-is-art@users.noreply.github.com" }
]
dependencies = [
    "jupyter",
    "ipykernel",
    "tensorflow",
    "pandas",
    "numpy",
    "matplotlib",
    "seaborn",
    "gsutil>=5.30",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
virtual = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/training_data_analyst"]
